# HotMem

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  dev_roadmap.md  mkdocs.yml  planned-evolution.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  docker.yml  docs.yml  publish.yml  release.yml
adapters/autogen/: README.md  pyproject.toml
adapters/autogen/hotmem_autogen/: __init__.py  memory.py
adapters/autogen/tests/: test_autogen.py
adapters/crewai/: README.md  pyproject.toml
adapters/crewai/hotmem_crewai/: __init__.py  memory.py
adapters/crewai/tests/: test_crewai.py
adapters/hermes/: README.md  pyproject.toml
adapters/hermes/hotmem_hermes/: __init__.py  cli.py  plugin.yaml  provider.py  sync.py
adapters/hermes/skill/hotmem-memory/: SKILL.md
adapters/hermes/tests/: test_hermes.py
adapters/langchain/: README.md  pyproject.toml
adapters/langchain/hotmem_langchain/: __init__.py  message_history.py  retriever.py
adapters/langchain/tests/: test_langchain.py
adapters/pydanticai/: README.md  pyproject.toml
adapters/pydanticai/hotmem_pydanticai/: __init__.py  provider.py
adapters/pydanticai/tests/: test_pydanticai.py
data/hotmem/: manifest.json
docs/: api.md  cli.md  hermes-v0.3-epic.md  index.md  quickstart.md  snapshot-v2.md  yc_coding_session_trace.md
docs/okf/: file-aware-architecture.md  file-native-epic.md  file-native-memory-practices.md  format-and-maintenance.md  index.md
docs/vnext/: 0001-file-aware-sidecar.md
examples/: README.md
examples/autogen_group_chat/: README.md  chat.py
examples/crewai_crew/: README.md  crew.py
examples/fastapi_backend/: README.md  app.py  requirements.txt
examples/langchain_agent/: README.md  agent.py
examples/mcp_claude_desktop/: README.md  claude_desktop_config.json
examples/pydanticai_agent/: README.md  agent.py
examples/typescript/: README.md  agent.ts
hotmem/: manifest.json
src/hotmem/: __init__.py  bundle.py  bundle_index.py  cli.py  client.py  db.py  embed.py  events.py  hygiene.py  lifecycle.py  mcp_server.py  memory.py  mount.py  openapi.py  playground.py  profiles.py  provenance.py  search.py  server.py  swap.py  trace.py  ui.py
src/hotmem/importers/: __init__.py  mem0.py
src/hotmem/inspectors/: __init__.py  _thrift.py  base.py  csv_inspector.py  jsonl_inspector.py  parquet_inspector.py
src/hotmem/snapshot/: __init__.py  format.py  reader.py  writer.py
src/hotmem/storage/: __init__.py  base.py  local.py
tests/: _parquet_fixtures.py  conftest.py  spy.py  test_api.py  test_api_extensions.py  test_bundle.py  test_bundle_index.py  test_cli.py  test_client.py  test_db.py  test_embed.py  test_events.py  test_file_backed.py  test_hygiene.py  test_import_mem0.py  test_inspectors.py  test_lifecycle.py  test_mcp.py  test_migration.py  test_mount.py  test_playground.py  test_profiles.py  test_search.py  test_snapshot_v2.py  test_storage.py  test_swap.py  test_ui.py
tests/fixtures/: v1_memories.sqlite
tests/golden/: __init__.py  conftest.py  test_golden_additive.py  test_golden_api.py  test_golden_client.py  test_golden_mcp.py  test_golden_swap.py
tests/golden/fixtures/: memories_expected.json  search_expected.json
ts/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
ts/src/: client.ts  index.ts  types.ts
ts/tests/: client.test.ts
