[project]
name = "hotmem"
version = "0.1.0"
description = "A local-first memory sidecar for agent applications"
readme = "README.md"
authors = [
    { name = "valiantone", email = "zrjohn@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
hotmem = "hotmem.cli:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
