[project]
name = "hotmem"
version = "0.1.4"
description = "A local-first memory sidecar for agent applications"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "valiantone", email = "zrjohn@yahoo.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1,<9",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/valiantone/hotmem"
Repository = "https://github.com/valiantone/hotmem"

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15,<1",
]

[project.scripts]
hotmem = "hotmem.cli:main"

[build-system]
requires = [
    "setuptools>=75",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

