[project]
name = "hotmem"
version = "0.1.8"
description = "A local-first memory sidecar for agent applications"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "valiantone", email = "zrjohn@yahoo.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "click>=8.1,<9",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/KnowGuard-AI/HotMem"
Repository = "https://github.com/KnowGuard-AI/HotMem"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0,<2",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "pyyaml>=6.0,<7",
]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=6,<7",
    "ruff>=0.15,<1",
]

[project.scripts]
hotmem = "hotmem.cli:main"

[build-system]
requires = [
    "setuptools>=75",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
