[project]
name = "hotmem-autogen"
version = "0.1.0"
description = "AutoGen memory adapter for the HotMem memory sidecar"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "valiantone", email = "zrjohn@yahoo.com" }]

dependencies = [
    "hotmem>=0.1.8",
]

[project.optional-dependencies]
autogen = [
    "autogen-agentchat>=0.4,<1",
]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15,<1",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
