[project]
name = "hotmem-crewai"
version = "0.1.0"
description = "CrewAI memory adapter for the HotMem memory sidecar"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "valiantone", email = "zrjohn@yahoo.com" }]

dependencies = [
    "hotmem>=0.1.8",
    "crewai>=0.70,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15,<1",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
